--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6,7 +6,7 @@
 }
 
 #timer { 
-	background: rgba(23,45,56,0.3) ; 
+	background: rgba(23,45,56,0.7) ; 
 	width: 80%;
 	left:10%;
 	top:30%;
@@ -16,21 +16,12 @@
 	font-weight: bold;
 	text-align: center;
 	font-size: 210px;
+	color: white;
 
 
 }
 
-#labels{
-	font-family: moon_flower_downloaded;
-	font-weight: bold;
-
-	width:80%;
-	height:20%;
-	left:10%;
-	background: rgba(23,45,56,0.3) ; 
-	top:50%;
-	position: relative;
-}
+.ng-cloak { display:none; }
 
 /* Video Background Section */
 
@@ -52,7 +43,7 @@ background-size: cover;
 	height:10%;
 	left:15%;
 	font-size: 58px;
-
+	color: white;
 	position:absolute;
 
 
